--- a/css/style.css
+++ b/css/style.css
@@ -49,11 +49,30 @@ html {
     font-size: 16px;
 }
 
-  .nav-links a:hover,
   .nav-links a:focus,
   .nav-links a.active {
     color: #FFCB05;
     font-weight: 700;
+    text-decoration: underline;
+}
+
+.nav-links a:hover {
+  text-decoration: underline;
+}
+
+main {
+    margin: 32px;
+}
+
+h1 {
+    font-size: 40px;
+    line-height: 1.3;
+    font-weight: 700;
+    margin: 32px;
+}
+
+h2 {
+
 }
 
 
@@ -88,6 +107,7 @@ html {
     color: white;
     text-decoration: none;
     font-size: 16px;
+    line-height: 2;
     font-weight: bold;
 }
 
