--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@ html {
     left: 0;
     background: #FFCB05;
     color: #00274C;
-    padding: 10px 15px;
+    padding: 10px 16px;
     font-weight: 600;
     text-decoration: none;
     border-radius: 4px;
@@ -27,7 +27,7 @@ html {
     grid-template-columns: auto 1fr;
     align-items: center;
     background-color: #00274C;
-    padding: 16px 32px;
+    padding: 16px 20px;
 }
 
 
@@ -61,20 +61,48 @@ html {
 }
 
 main {
-    margin: 32px;
+    margin: 20px;
 }
 
 h1 {
-    font-size: 40px;
+    font-size: 32px;
     line-height: 1.3;
     font-weight: 700;
-    margin: 32px;
+    margin: 20px;
 }
 
 h2 {
-
+    font-size: 24px;
+    line-height: 1.4;
+    font-weight: 700;
 }
 
+ul {
+    font-size: 16px;
+    line-height: 1.4;
+    font-weight: 500;
+}
+
+p {
+    font-size: 16px;
+    line-height: 1.4;
+    font-weight: 500;
+}
+
+li {
+    font-size: 16px;
+    line-height: 1.4;
+    font-weight: 500;
+}
+
+section {
+    margin-bottom: 48px;
+}
+
+.banner-image {
+    width: 100%;
+    padding: 16px 0;
+}
 
 .footer {
     display: grid;
@@ -82,7 +110,7 @@ h2 {
     align-items: center;
     background-color: #00274C;
     color: white;
-    padding: 40px 32px;
+    padding: 40px 20px;
     gap: 64px;
   }
 
@@ -121,6 +149,7 @@ h2 {
 .footer {
       grid-template-columns: 1fr  1fr 1fr;
       text-align: left;
+      padding: 40px 32px;
 
  }
 
@@ -129,4 +158,26 @@ h2 {
     grid-template-columns: 1fr 1fr 1fr 1fr;
     gap: 40px;
  }
+
+ main {
+    margin: 32px;
+}
+
+h1 {
+    font-size: 40px;
+    line-height: 1.3;
+    font-weight: 700;
+    margin: 32px;
+}
+
+h2 {
+    font-size: 32px;
+    line-height: 1.4;
+    font-weight: 700;
+}
+
+.navbar {
+    padding: 16px 32px;
+}
+
 }
