--- a/css/style.css
+++ b/css/style.css
@@ -139,6 +139,7 @@ section {
     grid-template-columns: 1fr;
     gap: 24px;
     justify-items: center;
+    padding-top: 20px;
   }
 
   .card {
@@ -151,6 +152,11 @@ section {
     padding: 20px;
     text-align: left;
     border: #dbdbdb;
+  }
+
+  .card-icon {
+    width: 48px;
+    height: 48px;
   }
 
   .card-icon-1 {
